# AI-shujvku

./: .env.example  .gitignore  AGENTS.md  AI自动查文献.md  AI自动查文献进度.md  CHANGES.md  LitAICollector.spec  README.md  build.bat  build.sh  config.json  launch.py  main.py  paper_finder.py  pyproject.toml  requirements.txt  tmp_chinese_test.txt  tmp_ingestion_preview.html  tmp_mechanism_preview.html  tmp_mojibake_fix.txt  tmp_settings_fixed_preview.html  tmp_settings_script.js
app/: config.py
app/core/: config.py  models.py  paper_naming.py  project_manager.py
app/models/: __init__.py  all_models.py
app/schemas/: metadata.py
app/services/: ai_extractor.py  crossref_service.py  download_service.py  downloader.py  findpapers_service.py  (+8 more)
literature-ai/: .dockerignore  .env.example  .geminirules  .gitignore  AGENTS.md  ARCH_UI_Redesign.md  MCP_API.md  MCP_IMPLEMENTATION.md  MODIFICATION_REPORT_SSE.md  PERFORMANCE_ANALYSIS_REPORT.md  PRD_UI_Redesign.md  README.md  ai_workflow_schemas.py  docker-compose.yml  docker-compose.yml.bak  missing_schemas.py  more_schemas.py  ref_schema.py  writer_schemas.py  使用说明.md  启动文献库.bat  外部AI接入知识库_实施计划.md
local/: README.md
outputs/: README.md  impact_metadata_template_builder.mjs
scripts/: ai_auto_pipeline.py  check_repo_layout.py  cleanup_temp_artifacts.ps1  d2_active_library_test_pollution_audit.py  d2_controlled_historical_mirror_migration.py  d2_historical_mirror_migration_readiness.py  d2_shadow_registry_hygiene_gate.py  d2_target_conflict_and_artifact_inventory_gate.py  search_and_ingest.py  search_results_summary.json
(+715 files in other folders)
